--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -574,7 +574,8 @@
     <string name="sector_other">Other</string>
     <string name="programme_to">To: %s</string>
     <string name="programme_from">From: %1$td/%1$tm/%1$ty - %2$td/%2$tm/%2$ty</string>
-    <string name="last_updated_date">Last Updated: %1$td/%1$tm/%1$ty</string>
+    <string name="last_updated_label">Last Updated: </string>
+    <string name="date">%1$td/%1$tm/%1$ty</string>
     <string name="programme_in">In: %s</string>
     <string name="programme_results">Programme Results</string>
     <string name="hazard_other">Other</string>
