--- a/Alert/app/src/main/res/values/strings.xml
+++ b/Alert/app/src/main/res/values/strings.xml
@@ -600,6 +600,7 @@
     <string name="error_missing_affected_areas">Please enter at least one affected area</string>
     <string name="error_missing_information">Please add information sources and notes to this alert</string>
     <string name="assignee_updated_success">Action assignee updated successfully</string>
+    <string name="download_started">Download Started…</string>
 
     <plurals name="alert_population">
         <item quantity="one">%,d people affected in %d area</item>
